[tool.poetry]
name = "ac3"
version = "0.1.0"
description = ""
authors = ["carlos-rian <65134623+carlos-rian@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
unittest2 = "^1.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
